[tool.poetry]
name = "shepherd-fast"
version = "0.1.0"
description = "An implementation of shepherd using fastapi"
authors = ["fenjalien"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.12.3"
black = "^20.8b1"
pylint = "^2.6.0"

[tool.poetry.scripts]
local = "uvicorn main:app --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
