[tool.poetry]
name = "shepherd-fast"
version = "0.1.0"
description = "An implementation of shepherd using fastapi"
authors = ["fenjalien <34489450+fenjalien@users.noreply.github.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
aiofiles = "^0.6.0"
uvicorn = "^0.12.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pretty-errors = "^1.2.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
