[tool.poetry]
name = "shepherd-2"
version = "0.1.0"
description = "An implementation of shepherd using fastapi"
authors = ["fenjalien <34489450+fenjalien@users.noreply.github.com>", "Edwin Shepherd"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.65.2"
aiofiles = "^0.6.0"
uvicorn = "^0.12.3"
typer = "^0.3.2"
pretty-errors = "^1.2.19"
mypy = "^0.961"
pytest = "^7.1.2"
requests = "^2.28.0"
pytest-timeout = "^2.1.0"
python-multipart = "^0.0.5"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.6.0"
pytest = "^7.1.2"

[tool.pytest.ini_options]
testpaths = ["./test/"]
filterwarnings = ["ignore: There is no current event loop"]

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["uvicorn.*", "pretty_errors.*"]
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
